Bug 1255856 - Don't allow paint-skipping if there are windowed plugins on the page. r=mstange,jimm

MozReview-Commit-ID: BzQcUrSqCr5